deploy/ocp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: x2a-api
  namespace: x2a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: x2a-api
  template:
    metadata:
      labels:
        app: x2a-api
    spec:
      containers:
        - name: x2a-api
          image: quay.io/rbrhssa/x2a-api:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/x2a-api
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: x2a-api-config
            items:
              - key: config.yaml
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: x2a-api
  namespace: x2a
spec:
  selector:
    app: x2a-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: x2a-api
  namespace: x2a
  annotations:
    haproxy.router.openshift.io/timeout: 600s
    haproxy.router.openshift.io/rate-limit-connections: "true"
    haproxy.router.openshift.io/rate-limit-http-status: "429"
    haproxy.router.openshift.io/rate-limit-requests: "100"
    haproxy.router.openshift.io/rate-limit-period: "1s"
spec:
  to:
    kind: Service
    name: x2a-api
  port:
    targetPort: 8000
  tls:
    termination: edge
